--- a/indeed.css
+++ b/indeed.css
@@ -1,8 +1,5 @@
 *,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+
 
 html {
   font-family: sans-serif;
@@ -30,7 +27,7 @@ a {
 }
 
 a:hover {
-  color: #078571;
+  color: blue;
   text-decoration: underline;
 }
  
@@ -38,10 +35,7 @@ h1,h2,h3,h4,h5,h6,p{
   color: #020202 !important;
 } 
 
- 
-
-/********** Template CSS ************/
-
+ /* css */
 
 .btn {
   padding: 10px 25px;
@@ -64,7 +58,7 @@ h1,h2,h3,h4,h5,h6,p{
 
 
 
-/* ================ Navigation Menu ====================*/
+/* Navbar */
 
 
 .navbar-light {
@@ -91,47 +85,7 @@ h1,h2,h3,h4,h5,h6,p{
 }
 
 
-/*===================== Hero section ======================*/
-
-
-
-.display-1{
-  font-size: 160px;
-  font-weight: 1000;
-  
-}
-
-@media (max-width: 991.98px) {
-  .display-1{
-    font-size: 100px;
-    font-weight: 1000;
-  }
-  .card{
-    margin-top:  30px;
-  }
-}
-
- 
-.position-absolute{
-  font-weight: 700;
-  
-}
-
-.typed-cursor {
-  font-size: 45px;
-  color: blue;
-}
-
-.blue{
-  background-color: #1c5ce6;
-  color: #ffffff;
-}
-.btn{
-  border: 2px solid rgb(29, 105, 247);
-} 
-
-
-/*===================== Cards ====================*/
+/*Cards*/
 
 .card{
   border-radius: 30px;
@@ -154,16 +108,6 @@ h1,h2,h3,h4,h5,h6,p{
 
 .carousel-inner{
   border-radius: 30px;
-}
-
-
-
-/* ========================== Contact Us ========================*/
-
-.contact-form .help-block ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
 }
 
 
