--- a/indeed.css
+++ b/indeed.css
@@ -1,5 +1,3 @@
-*,
-
 
 html {
   font-family: sans-serif;
@@ -52,7 +50,7 @@ h1,h2,h3,h4,h5,h6,p{
 }
 
 .form-control {
-  border-radius: 25px;
+  border-radius: 15px;
 }
 
 
@@ -112,7 +110,7 @@ h1,h2,h3,h4,h5,h6,p{
 
 
 
-/*====================== Footer ==================*/
+/*Footer*/
 footer {
   background-color: #DEE2E6;
   padding-top: 80px;
@@ -152,6 +150,10 @@ footer ul li {
   color: var(--c-brand);
 }
 
+/* Error messaje form */
+
 .error{
   color: red;
+  width: "100 %";
+  margin-top: 10px;
 }
